# spotifull

./: Dockerfile  README.md  pyproject.toml  spotifull.py
.github/workflows/: docker.yml
